--- a/style.css
+++ b/style.css
@@ -7,11 +7,14 @@
     text-align: center;
     padding: 5px;
 }
+
 h2 {
     color: #000080;
     border: 3px solid #F5F5F5;
     padding: 5px;
     width: 25%;
+    margin: 2% 37.5%;
+    text-align: center;
 }
 
 body {
@@ -24,10 +27,6 @@ body {
 
 ol, ul {
     list-style-position: inside;
-}
-
-#name {
-    color: #FFD700;
 }
 
 h4, p, li {
@@ -69,7 +68,8 @@ h4, p, li {
 .img {
     background-position: center;
     height: 550px;
-    width: 800px;
+    /*width: 800px;*/
+    width: 80%;
     text-align: center;
 }
 .imgtext {
@@ -79,10 +79,42 @@ h4, p, li {
     top: 88%;
     position: relative;
     font-size: 2.5vmin;
+    text-decoration: none;
 }
 
 #projects {
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-gap: 10%;
+    grid-gap: 5%;
 }
+
+#menu{
+    background-color: #000080;
+    color: #F5F5F5;
+    display: grid;
+    grid-template-columns: 20% 18% 12% 12% 12% 12% 12%;
+    grid-gap: 0%;
+    text-align: center;
+}
+
+.dropdown a {
+    color: #F5F5F5;
+    /*text-decoration: none;*/
+}
+
+a {
+    text-decoration: none;
+}
+
+.dropdown a:hover {
+    background-color: #F5F5F5;
+    color: #000080;
+}
+
+#contact {
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20%;
+    grid-gap: 5%;
+    text-align: center;
+}
+
