--- a/style.css
+++ b/style.css
@@ -2,10 +2,13 @@
 
 /* Remove when construction done */
 #construction {
-    background-color: black;
-    color: yellow;
-    text-align: center;
+    width: 43%;
+    margin: 1.5% 29.5%;
+    background-color: ivory;
+    color: indigo;
+    border: 5px solid crimson;
     padding: 5px;
+    text-align: center;
 }
 
 h2 {
@@ -32,6 +35,10 @@ ol, ul {
 h4, p, li {
     font-family: "Monaco";
     color: #F5F5F5;
+}
+
+h4, p {
+    margin: 0.2% 2%;
 }
 
 .title {
@@ -75,20 +82,23 @@ h4, p, li {
 .imgtext {
     background-color: #000080;
     opacity: 0.8;
-    height: 50px;
+    height: 67px;
     top: 88%;
     position: relative;
     font-size: 2.5vmin;
     text-decoration: none;
+    margin: 0%;
 }
 
 #projects {
+    /* Center this */
     display: grid;
     grid-template-columns: 50% 50%;
     grid-gap: 5%;
+    margin: 5%;
 }
 
-#menu{
+#menu {
     background-color: #000080;
     color: #F5F5F5;
     display: grid;
@@ -104,6 +114,7 @@ h4, p, li {
 
 a {
     text-decoration: none;
+    color: #000080;
 }
 
 .dropdown a:hover {
@@ -118,3 +129,13 @@ a {
     text-align: center;
 }
 
+#sources {
+    color: #000080;
+    text-align: center;
+    text-decoration: none;
+    display: grid;
+    grid-template-columns: 15% 10% 10% 10% 10% 10%;
+    grid-gap: 5%;
+    margin: 2% 17.5%;
+    border: 3px dashed #F5F5F5;
+}
