--- a/projectstyles.css
+++ b/projectstyles.css
@@ -1,31 +1,38 @@
 body {
-    background-color: #A0A0A0;
+    /*background-color: #A0A0A0;*/
+    background-color: #f3f3f3;
     width: 100%;
-    color: #F5F5F5;
+    /*color: #F5F5F5;*/
+    color: #434343;
     font-family: "Georgia";
 }
 
 a {
     text-decoration: none;
-    color: #000080;
+    /*color: #000080;*/
+    color: #1c4587;
 }
 
 .title {
     text-align: center;
-    color: #000080;
+    /*color: #000080;*/
+    color: #1c4587;
 }
 
 .game {
     width: 800px;
     height: 800px;
-    background-color: #F5F5F5;
-    color: #000080;
+    /*background-color: #F5F5F5;*/
+    background-color: #d9d2e9;
+    /*color: #000080;*/
+    color: #1c4587;
     margin: auto;
 }
 
 .header {
     text-align: center;
-    color: #000080;
+    /*color: #000080;*/
+    color: #1c4587;
 }
 .text {
     margin: 0% 5%;
