--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@
 }
 
 h2 {
-    color: #000080;
-    border: 3px solid #F5F5F5;
+    /*color: #000080;*/
+    color: #1c4587;
+    border: 3px solid #434343/*#F5F5F5*/;
     padding: 5px;
     width: 25%;
     margin: 2% 37.5%;
@@ -22,8 +23,9 @@ h2 {
 
 body {
     /*text-align: center;*/
-    /*background-color: #D8BFD8;*/
+    /*background-color: #D8BFD8;
     background-color: #A0A0A0;
+    NEW COLOR?*/ background-color: #f3f3f3;
     width: 100%;
     justify-self: center;
 }
@@ -34,7 +36,7 @@ ol, ul {
 
 h4, p, li {
     font-family: "Monaco";
-    color: #F5F5F5;
+    color: #434343/*#F5F5F5*/;
 }
 
 h4, p {
@@ -66,7 +68,8 @@ h4, p {
 }
 
 .img p:hover {
-    background-color: #000080;
+    /*background-color: #000080;*/
+    background-color: #1c4587;
     height: 100%;
     top: 0%;
     font-size: 2.5vmin;
@@ -80,7 +83,9 @@ h4, p {
     text-align: center;
 }
 .imgtext {
-    background-color: #000080;
+    /*background-color: #000080;*/
+    background-color: #1c4587;
+    color: #F5F5F5;
     opacity: 0.8;
     height: 67px;
     top: 88%;
@@ -99,8 +104,10 @@ h4, p {
 }
 
 #menu {
-    background-color: #000080;
+    /*background-color: #000080;*/
+
     color: #F5F5F5;
+    background-color: #1c4587;
     display: grid;
     grid-template-columns: 20% 18% 12% 12% 12% 12% 12%;
     grid-gap: 0%;
@@ -110,32 +117,38 @@ h4, p {
 .dropdown a {
     color: #F5F5F5;
     /*text-decoration: none;*/
+    /*color: #434343;*/
 }
 
 a {
     text-decoration: none;
-    color: #000080;
+    /*color: #000080;*/
+    color: #1c4587;
 }
 
 .dropdown a:hover {
     background-color: #F5F5F5;
-    color: #000080;
+    /*color: #000080;
+    background-color: #434343; */
+    color: #1c4587;
 }
 
 #contact {
     display: grid;
-    grid-template-columns: 20% 20% 20% 20%;
-    grid-gap: 5%;
-    text-align: center;
+    grid-template-columns: 24% 24% 24% 24%;
+    grid-gap: 1%;
+    justify-items: center;
+    text-align:center;
 }
 
 #sources {
-    color: #000080;
+    /*color: #000080;*/
+    color: #1c4587;
     text-align: center;
     text-decoration: none;
     display: grid;
     grid-template-columns: 15% 10% 10% 10% 10% 10%;
     grid-gap: 5%;
     margin: 2% 17.5%;
-    border: 3px dashed #F5F5F5;
+    border: 3px dashed #434343/*#F5F5F5*/;
 }
