--- a/style.css
+++ b/style.css
@@ -1,15 +1,5 @@
-/*Colors: https://www.w3schools.com/cssref/css_colors.asp */
-/* {box-sizing:border-box}
-/* Remove when construction done */
-#construction {
-    width: 43%;
-    margin: 1.5% 29.5%;
-    background-color: ivory;
-    color: indigo;
-    border: 5px solid crimson;
-    padding: 5px;
-    text-align: center;
-}
+/*Colors: https://www.w3schools.com/cssref/css_colors.asp
+{box-sizing:border-box} */
 
 h2 {
     /*color: #000080;*/
@@ -74,15 +64,9 @@ h4, p {
 }
 
 .img:hover {
-    /* background-color: #000080;
-    background-color: #1c4587;
-    height: 100%;
-    top: 0%;
-    TODO: Center the text height-wise when hovering? */
     font-size: 3vmin;
-    margin: 0%;
-    top: 82%;
-    line-height: normal;
+    line-height: 33px;
+    font-weight: normal;
 }
 
 .img {
@@ -91,7 +75,12 @@ h4, p {
     /*width: 800px;*/
     width: 80%;
     text-align: center;
+    text-decoration: none;
     line-height: 100px;
+    font-size: 4vmin;
+    font-weight: bold;
+    align-items: center;
+    margin: auto;
 }
 
 
@@ -103,18 +92,21 @@ h4, p {
     height: 100px;
     top: 82%; /* vs 67 px, 88% prev */
     position: relative;
-    font-size: 3vmin; /* 4vmin; better for non-hover option? */
-    text-decoration: none;
     margin: 0%;
-    align-items: center;
 }
 
 #projects {
     /* Center this */
+    /*align-items: center;*/
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-gap: 5%;
+    row-gap: 3%;
     margin: 5%;
+}
+
+#intro, #school, #skills {
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 #menu {
